@@ -1,9 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.595 2006/02/12 01:54:04 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.596 2006/02/12 23:13:55 agaffney Exp $
 
-*GLI-0.3 (11 Feb 2006)
+*GLI-0.3 (12 Feb 2006)
+
+  12 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/templates/x86ArchitectureTemplate.py:
+  pull old start/end sector values from somewhere that actually has them
+  add logic for extended partition to code that makes sure new end sector
+  doesn't overlap start sector of next partitions
 
   11 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
